@@ -8,7 +8,7 @@ pa_server_port=8888
 pa_caching_file_enabled=true
 
 # prompt for login, use the "username;password" credentials from "./config/credentials.csv"
-pa_enable_authentication=false
+pa_enable_authentication=true
 
 # Number of maximum parallel analysis allowed
 pa_analysis_threads=10
