@@ -1,0 +1,22 @@
+package com.pengtoolbox.pageanalyzer._main;
+
+public class SessionData {
+	
+	private boolean isLoggedIn = false;
+	private String username = null;
+	
+	public boolean isLoggedIn() {
+		return isLoggedIn;
+	}
+	public void setLoggedIn(boolean isLoggedIn) {
+		this.isLoggedIn = isLoggedIn;
+	}
+	public String getUsername() {
+		return username;
+	}
+	public void setUsername(String username) {
+		this.username = username;
+	}
+	
+	
+}
