@@ -13,6 +13,7 @@ import org.eclipse.jetty.server.Request;
 import org.eclipse.jetty.server.handler.HandlerWrapper;
 
 import com.pengtoolbox.pageanalyzer._main.PA;
+import com.pengtoolbox.pageanalyzer._main.SessionData;
 import com.pengtoolbox.pageanalyzer.logging.PALogger;
  
 public class RequestHandler extends HandlerWrapper
@@ -72,6 +73,11 @@ public class RequestHandler extends HandlerWrapper
     	// Get Session
     	//##################################
     	HttpSession session = request.getSession();
+    	
+    	if(session.getAttribute(PA.SESSION_DATA) == null) {
+    		session.setAttribute(PA.SESSION_DATA, new SessionData());
+    	};
+    	
     	//workaround maxInactiveInterval=-1 issue
     	session.setMaxInactiveInterval(3600);
 
