@@ -1,6 +1,7 @@
 ########################################
 # Page Analyzer in progress
 ########################################
+- added Login / Logout 
 
 ########################################
 # Page Analyzer v 0.9
